[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/playnormal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/playpressed.png" type="Texture" id=3]
[ext_resource path="res://Sprites/help.png" type="Texture" id=4]
[ext_resource path="res://Sprites/helppressed.png" type="Texture" id=5]
[ext_resource path="res://Sprites/creditnormal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/creditpressed.png" type="Texture" id=7]
[ext_resource path="res://Sprites/singleplayer.png" type="Texture" id=8]
[ext_resource path="res://Sprites/multiplayer.png" type="Texture" id=9]
[ext_resource path="res://Sprites/soundon.png" type="Texture" id=10]
[ext_resource path="res://Sprites/soundoff.png" type="Texture" id=11]
[ext_resource path="res://Sprites/exit.png" type="Texture" id=12]
[ext_resource path="res://Fonts/BLOXAT.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_space = 10
font_data = ExtResource( 13 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Play" type="TextureButton" parent="MenuContainer"]
margin_left = 115.0
margin_top = 308.0
margin_right = 243.0
margin_bottom = 436.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Options" type="HBoxContainer" parent="MenuContainer"]
margin_top = 443.0
margin_right = 360.0
margin_bottom = 494.0
custom_constants/separation = 2
alignment = 1

[node name="Help" type="TextureButton" parent="MenuContainer/Options"]
margin_left = 13.0
margin_right = 78.0
margin_bottom = 51.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Credit" type="TextureButton" parent="MenuContainer/Options"]
margin_left = 80.0
margin_right = 145.0
margin_bottom = 51.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Mode" type="TextureButton" parent="MenuContainer/Options"]
margin_left = 147.0
margin_right = 212.0
margin_bottom = 51.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="Sound" type="TextureButton" parent="MenuContainer/Options"]
margin_left = 214.0
margin_right = 279.0
margin_bottom = 51.0
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="Quit" type="TextureButton" parent="MenuContainer/Options"]
margin_left = 281.0
margin_right = 346.0
margin_bottom = 51.0
texture_normal = ExtResource( 12 )

[node name="Credit" type="Control" parent="MenuContainer"]
editor/display_folded = true
visible = false
margin_top = 511.0
margin_right = 360.0
margin_bottom = 720.0

[node name="Text" type="Label" parent="MenuContainer/Credit"]
margin_top = 20.0
margin_right = 360.0
margin_bottom = 200.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "HELLO

WORLD"
align = 1
uppercase = true

[node name="Timer" type="Timer" parent="MenuContainer/Credit"]
wait_time = 2.0

[node name="Help" type="Control" parent="MenuContainer"]
editor/display_folded = true
visible = false
margin_top = 512.0
margin_right = 360.0
margin_bottom = 720.0

[node name="Text" type="Label" parent="MenuContainer/Help"]
margin_top = 20.0
margin_right = 360.0
margin_bottom = 200.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "HELLO

WORLD"
align = 1
uppercase = true
[connection signal="pressed" from="MenuContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="toggled" from="MenuContainer/Options/Help" to="." method="_on_Help_toggled"]
[connection signal="toggled" from="MenuContainer/Options/Credit" to="." method="_on_Credit_toggled"]
[connection signal="toggled" from="MenuContainer/Options/Mode" to="." method="_on_Mode_toggled"]
[connection signal="pressed" from="MenuContainer/Options/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="MenuContainer/Credit/Timer" to="." method="_on_Timer_timeout"]
